--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@trpc/server": "next",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.10",
-    "next": "^14.1.3",
+    "next": "^14.2.3",
     "next-auth": "^4.24.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "superjson": "^2.2.1",
     "vercel": "^33.7.0",
     "zod": "^3.22.4"
