--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db-seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
@@ -51,6 +52,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "prisma": "^5.10.2",
+    "tsx": "^4.11.0",
     "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
